--- a/resume.html
+++ b/resume.html
@@ -141,7 +141,7 @@ tr:nth-child(even) {background-color: #f2f2f2;}
   
 </div>
 
-<p><img src="https://www.nbcc.cn/_upload/article/images/c3/bb/fafc25a84cb884341631ce08e700/6342aabb-a316-4be9-a96c-0c40852cc0ab.jpg"  style="float:right;width:500px;height:350px;"></p>
+<p><img src="https://mmbiz.qpic.cn/mmbiz_jpg/ibtb50Ftt8Ciaibriaq3GNOs2qvm7IHjl4AOoI1zZR44ryPYO0OmzNFaJj2Qctwmicick9YRP2bYxbIuM2vl9icM755icw/640?wx_fmt=jpeg&wxfrom=5&wx_lazy=1&wx_co=1"  style="float:right;width:500px;height:350px;"></p>
 <head>
 <title>W3.CSS</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
