--- a/IT project.html
+++ b/IT project.html
@@ -193,7 +193,7 @@ tr:nth-child(even) {background-color: #f2f2f2;}
   
 </div>
 
-<p><img src="https://mmbiz.qpic.cn/mmbiz_jpg/ibtb50Ftt8Ciaibriaq3GNOs2qvm7IHjl4AOoI1zZR44ryPYO0OmzNFaJj2Qctwmicick9YRP2bYxbIuM2vl9icM755icw/640?wx_fmt=jpeg&wxfrom=5&wx_lazy=1&wx_co=1"  style="float:right;width:500px;height:350px;"></p>
+<p><img src="https://img1.baidu.com/it/u=1162520932,3721467591&fm=253&fmt=auto&app=138&f=JPEG?w=693&h=500"  style="float:right;width:500px;height:350px;"></p>
 <div> 
   <a class="footer-link" href="https://kkaslana.github.io/441.8.1/">Course Details1</a>
  <a class="footer-link" href="https://kkaslana.github.io/441.8.1/">Course Details2</a>
